new chapters, fixed typos

--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting Conected
+title: Getting Connected
 ---
 
 Scribe for Meetings offers two quick, painless ways to connect to your accessible slide presentation.
