--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -46,7 +46,7 @@ Provided the organizer has allowed for slides to be downloaded, Scribe for Meeti
         * Grade 2 (EBAE)
         * Unified English Braille (UEB)
         * and many other languages
-1. After you have customized any optional settings associated with your chosen formt, click the “Prepare Download” button.
+1. After you have customized any optional settings associated with your chosen format, click the “Prepare Download” button.
 1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
 1. Clicking the link will instantly begin the download.
 
