--- a/src/content/docs/it/dashboard.mdx
+++ b/src/content/docs/it/dashboard.mdx
@@ -1,80 +1,39 @@
 ---
-title: Il cruscotto di gestione RIM
+title: Gestione e amministrazione
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings dispone di un cruscotto basato sul web per facilitare varie attività di gestione di riunioni, account e organizzazioni.
+Va notato che le funzionalità del cruscotto dipendono in larga misura dal fatto che siate utenti o amministratori.
 
-RIM dispone di un dashboard basato sul Web per facilitare varie attività di gestione dei computer e degli account. È possibile gestire i computer non presidiati esistenti, creare programmi di installazione preconfigurati per i computer di destinazione e molto altro ancora.  
-Va notato che le funzionalità del dashboard dipendono in larga misura dal livello di abbonamento dell'account. Ad esempio, gli utenti aziendali possono assegnare i computer a gruppi di destinazione e creare installatori silenziosi. D'altra parte, chiunque (compresi gli utenti privati) può creare installatori personalizzati per i propri computer non presidiati.
+## Gestione delle riunioni
 
-## Individuazione della dashboard
+La sezione dei meeting elenca tutti i meeting, passati e presenti, facilitati da voi e/o dalla vostra organizzazione. Facendo clic su una riunione si apre una pagina di dettagli che consente di:
+* Caricare una presentazione nuova o rivista
+* Cancellare la presentazione esistente
+* Accedere al link della riunione
+* Visualizzare quanti partecipanti sono entrati nella riunione utilizzando Scribe for Meetings (admin)
 
-Se siete un controller, il modo più semplice per raggiungere la dashboard è attraverso l'interfaccia principale di RIM. Facendo clic sul pulsante RIM Dashboard si aprirà automaticamente la dashboard nel browser predefinito, con il login già effettuato.  
-Se si è un amministratore di rete che non ha installato RIM, è sufficiente accedere al proprio account sul sito web di RIM per visualizzare la dashboard.
+Facendo clic sul link "Elimina" accanto a una riunione, verrà richiesta una conferma e la riunione verrà eliminata dal proprio account.
 
-## Gestione degli obiettivi
+## Statistiche sulle presenze (admin)
 
-Facendo clic sul link "Configura obiettivi", si accede a una pagina che consente di gestire tutte le macchine configurate per l'accesso non presidiato. È possibile fare clic su uno qualsiasi di questi computer per gestirlo. Una volta entrati, sarà possibile
-* Rinominare il target
-* Spostare il target in un gruppo diverso (maggiori informazioni sui gruppi di target in seguito)
-* Eliminare il target
+La sezione delle statistiche sulle presenze fornisce un conteggio giornaliero, settimanale, mensile, annuale e di tutti i tempi di tutti gli utenti unici che partecipano alle riunioni utilizzando Scribe for Meetings nell'ambito della vostra organizzazione.
 
-## Gruppi di destinazione (per gli account Pro e superiori)
+## Predefinite riunioni (admin)
 
-Supponiamo, ad esempio, che il vostro gruppo di lavoro sia distribuito in diverse sedi. Oppure che si vogliano designare gruppi di macchine per i tecnici della manutenzione ordinaria. I gruppi di destinazione consentono di fare proprio questo. Per farlo, è sufficiente fare clic sul pulsante "Crea gruppo di destinazione", assegnare un nome al gruppo e inviare.  
-È possibile creare tutti i gruppi di destinazione necessari per il proprio caso d'uso. 
+La pagina Predefiniti riunione, che si trova nel menu Impostazioni, consente di impostare predefiniti globali che persistono in tutte le riunioni. Queste includono:
+* Lingua
+* Preferenza per la descrizione automatica delle immagini
+* Se consentire il download delle diapositive
 
-### Controllo degli accessi (per le organizzazioni aziendali)
+## Gestione dell'organizzazione (admin)
 
-Se le vostre organizzazioni assegnano un tecnico dell'assistenza a un gruppo specifico di macchine, probabilmente vorrete assicurarvi che abbia accesso solo a quel gruppo specifico. È qui che entra in gioco l'impostazione del controllo degli accessi per i gruppi di destinazione.  
-Quando si fa clic su un gruppo di destinazione, vengono offerte le opzioni per gestire i computer del gruppo e il gruppo stesso. Nella sezione di controllo dell'accesso è possibile concedere l'accesso al gruppo in base all'account. È sufficiente inserire l'indirizzo e-mail dell'account che si desidera aggiungere, quindi fare clic sul pulsante "Dai accesso". Una volta fatto ciò, verrà presentata una tabella di account a cui è stato concesso l'accesso a questo gruppo. Sotto ogni account è presente il pulsante "Revoca accesso". Questo pulsante non richiede ulteriori conferme.  
-Si noti che a tutti gli amministratori dell'organizzazione viene automaticamente concesso l'accesso alla gestione di tutti i gruppi creati nell'ambito dell'organizzazione.
+Facendo clic sul pulsante "Organizzazione" si accede al link "Membri". Questa pagina consente di aggiungere membri all'organizzazione e di gestire i membri esistenti.
 
-## Impostazione di un programma di installazione RIM preconfigurato (Pro o superiore)
+### Aggiunta di membri
 
-Uno dei modi più semplici per impostare un computer per connessioni non presidiate o richieste è creare un programma di installazione personalizzato. Questo è incredibilmente utile se si stanno configurando distribuzioni di massa o anche come modo più semplice per rendere RIM attivo e funzionante sul computer di un utente finale per il quale si intende fornire assistenza regolarmente.
+Per aggiungere un membro, è sufficiente inserire il suo indirizzo e-mail nella casella "Indirizzo e-mail", selezionare il suo ruolo nel menu a discesa e fare clic sul pulsante "Aggiungi".
 
-Per fare questo:
-1. Nella schermata di gestione dei target, fare clic sul pulsante "Build Target Installer".
-1. Verrà innanzitutto chiesto se si desidera che la macchina sia configurata per l'accesso completamente non presidiato o per l'accesso guidato, in cui l'utente deve accettare una richiesta per avviare la connessione.
-1. Verrà quindi richiesto di assegnare un gruppo di destinazione. Si noti che la selezione del gruppo di destinazione andrà automaticamente al gruppo di destinazione scelto se si avvia la configurazione del programma di installazione dalla pagina del gruppo.
-1. Verrà chiesto per quanto tempo si desidera che il programma di installazione sia valido. La validità può variare da 7 a 30 giorni. Si noti che questo periodo di tempo influisce solo sulla funzionalità del pacchetto di installazione. In altre parole, la configurazione RIM della macchina non verrà disattivata alla scadenza dell'installazione.
-1. Viene quindi data la possibilità di assegnare un nome basso. A qualsiasi macchina approvvigionata tramite questo pacchetto di installazione verrà assegnato questo nome di base.
-1. Viene quindi presentata una casella di controllo che consente di scegliere di ricevere una notifica via e-mail quando un utente installa RIM tramite questo programma di installazione.
-1. Se siete un amministratore aziendale, vedrete una casella di controllo che vi permette di creare il programma di installazione come pacchetto MSI. Questa opzione è utile per la distribuzione di massa di un programma di installazione personalizzato su un cluster di macchine che saranno designate per il gruppo di destinazione indicato.
-1. Verrà richiesto di fornire il nome del programma di installazione e, facoltativamente, alcune note. Queste sono per i registri interni e non appariranno nel programma di installazione creato.
-1. Fare clic su "Build Installer" Verrà visualizzato il link per il download che può essere copiato negli appunti e inviato all'utente finale. In alternativa, è possibile scaricare direttamente il programma di installazione per utilizzarlo nelle distribuzioni di massa.
+### Gestione degli utenti esistenti
 
-Una volta ottenuto il programma di installazione, è possibile eseguirlo in due modi. In entrambi i casi, al termine dell'installazione il computer verrà aggiunto all'elenco dei computer dell'account e del client RIM.
-
-### Esecuzione normale
-
-Durante l'esecuzione del programma di installazione, l'utente riceverà un prompt contenente le seguenti informazioni:
-* Il nome del tecnico e la sua organizzazione, se applicabile
-* la natura della connessione, ovvero se è richiesto un prompt o meno
-
-L'utente può scegliere se rispondere sì o no all'installazione. Rispondendo no, l'installazione viene annullata. Al termine dell'installazione, l'utente riceverà un messaggio che lo informa che il suo computer è ora configurato per l'accesso remoto.
-
-### Installazione silenziosa (solo per gli installatori aziendali)
-
-È possibile avviare un'installazione silenziosa eseguendo il programma di installazione eseguibile con il parametro della riga di comando */S*. Questo è utile quando si installa RIM come parte di una routine di distribuzione di massa.
-
-## Cronologia delle sessioni
-È possibile visualizzare l'intera cronologia delle sessioni passate attraverso il cruscotto di RIM. La cronologia delle sessioni contiene attualmente la data e l'ora di ogni sessione, il nome del computer a cui ci si è connessi e la durata della sessione. Si può anche scegliere di aggiungere commenti a una sessione tramite il link "Aggiungi commento" nella riga della sessione. Questo è utile per aggiungere note sullo stato attuale di un incidente, sia per sé che per gli amministratori dell'organizzazione.
-
-## Gestione dell'abbonamento (piani PVVersonal e Pro)
-Il cruscotto consente di visualizzare e gestire facilmente i dettagli dell'abbonamento RIM. Facendo clic sul link "Gestisci abbonamento", è possibile:
-* Aggiornare il proprio piano
-* Aggiornare il metodo di pagamento
-* Annullare i pagamenti ricorrenti
-
-### Aggiornamento del piano
-
-È possibile aggiornare facilmente il proprio abbonamento. Se avete un piano mensile, vi verrà addebitato il costo residuo del nuovo importo, mentre l'intero importo verrà addebitato per i mesi successivi. Facendo clic su "Aggiorna abbonamento" si apre una pagina quasi identica a quella di selezione del piano iniziale. Ci sono alcune differenze degne di nota che illustreremo di seguito:
-* Non è possibile effettuare il downgrade a un piano con meno macchine. È invece possibile passare da un piano mensile a uno annuale con lo stesso numero di macchine del piano attuale. Per effettuare il downgrade, è necessario annullare il piano, attendere la sua scadenza e avviare un nuovo piano con un numero inferiore di macchine.
-* I piani Enterprise, compreso l'addon Enterprise, non possono essere acquistati direttamente da questa pagina.
-
-### Annullamento dei pagamenti ricorrenti
-
-Quando si fa clic su "Annullamento del rinnovo automatico", viene richiesta una conferma, dopodiché l'abbonamento viene impostato per scadere alla fine del periodo corrente.
+Accanto a ciascun utente sono presenti due pulsanti. Uno consente di cambiare il ruolo dell'utente, mentre l'altro lo elimina dall'organizzazione.
