plans and purchase section

--- a/src/content/docs/de/plans.mdx
+++ b/src/content/docs/de/plans.mdx
@@ -2,74 +2,16 @@
 title: Planen und Einkaufen
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for Meetings bietet eine Vielzahl von Plänen und On-Demand-Kaufoptionen für Einzelpersonen, Unternehmen und Organisationen.
 
-Remote Incident Manager ist in einer Vielzahl von Szenarien mit unterschiedlicher Häufigkeit nützlich. Daher versucht unsere mehrstufige Planstruktur, Sie dort abzuholen, wo Sie sind. Denken Sie außerdem daran, dass RIM für die Person, die Hilfe erhält, immer kostenlos ist.
+## Meeting Pass
 
-## Free Tier
+Mit einem Meeting-Pass können Sie ein einzelnes Meeting mit Scribe for Meetings durchführen. Besprechungspässe laufen nicht ab.
 
-Jeder kann RIM nutzen, um einem anderen Nutzer bis zu 30 Minuten pro Tag zu helfen. Diese Minuten müssen nicht in einer Sitzung verbraucht werden, und ein Nutzungszähler zeigt an, wie viele Minuten Sie an einem bestimmten Tag haben. Während der 30 Minuten können Sie sich mit einer beliebigen Anzahl von Personen in beliebig vielen interaktiven Sitzungen verbinden.
+## Einzelabonnement
 
-## Verbraucher-Pläne
+Mit einem Einzelabonnement kann ein Benutzer eine unbegrenzte Anzahl von Meetings durchführen. Einzelabonnements sind mit monatlicher oder jährlicher Abrechnungsperiode erhältlich.
 
-### Pässe
+## Organisations-Abonnement
 
-Pässe sind nützlich, wenn Sie je nach Bedarf Hilfe leisten. Wenn Sie für einen Pass bezahlen, wartet dieser Pass geduldig darauf, dass Sie ihn aktivieren, wann immer Sie dazu in der Lage sind. Das bedeutet auch, dass Sie mehrere Pässe aufbewahren und sie bei Bedarf nutzen können.
-
-#### Vorfall-Pass
-
-Mit einem Störungspass können Sie einem einzelnen Nutzer so lange helfen, wie es innerhalb von 24 Stunden erforderlich ist. Während dieser 24 Stunden können Sie jederzeit eine neue Verbindung herstellen. Nehmen wir an, Sie beginnen damit, eine Neuinstallation von Windows über Nacht einzurichten. Sobald der Rechner RIM nutzen kann, können Sie zurückkommen und das System des Endbenutzers so konfigurieren, wie er es für richtig hält.
-
-#### Tagespass
-
-Mit einem Tagespass können Sie mehrere Benutzer über einen Zeitraum von 24 Stunden unterstützen. Wenn Sie also mehrere Besorgungen zu erledigen haben, sollten Sie einen solchen Pass erwerben.
-
-### Prepaid-Stundenpakete
-
-Diese Pakete ermöglichen es Ihnen, eine bestimmte Anzahl von Stunden auf Ihrem Konto zu haben. Diese Stunden bleiben ab dem Datum der ersten Nutzung ein Jahr lang gültig, oder ein Jahr ab dem Kaufdatum, wenn sie nicht genutzt werden.
-Diese Stunden können für beliebige interaktive Sitzungen verwendet werden, und RIM zieht nur die genaue, minutengenaue Zeit ab, die Sie verbraucht haben. Wenn Sie zum Beispiel 5 Stunden haben und 12 Minuten nutzen, bleiben Ihnen 4 Stunden und 48 Minuten. Zu beachten ist auch, dass Ihr kostenloses tägliches 30-Minuten-Kontingent vorrangig vor der im Voraus bezahlten Zeit verbraucht wird. Wenn Ihnen die Zeit ausgeht, egal ob es sich um vorausbezahlte Zeit oder Ihr kostenloses tägliches Kontingent handelt, erhalten Sie eine Warnung von 5 Minuten und 1 Minute. Wenn Ihre bezahlte Zeit bald abläuft und Sie Ihr Konto auffüllen, bevor die Zeit abläuft, wird Ihre Sitzung nicht unterbrochen.
-
-### Persönliche Abonnements für unbeaufsichtigten Zugang
-
-Mit diesen Abonnements können Sie als einzelner Kontrolleur eine bestimmte Anzahl von physischen Rechnern für den unbeaufsichtigten Zugang konfigurieren. Diese Pläne sind skalierbar (bis zu zehn Ziele), um Ihre Anforderungen zu erfüllen. Ganz gleich, ob Sie einfach nur Ihren Desktop von unterwegs aus steuern möchten oder ob Sie der technische Support für einige Familienmitglieder sind - mit diesen Abonnements sind Sie bestens versorgt.  
-Beachten Sie, dass die Abonnements nicht für interaktive Sitzungen gelten, d. h. solche, die über ein Schlüsselwort eingeleitet werden. Die oben beschriebenen Vorfallspässe und Tagespässe können zusammen mit einem Abonnement verwendet werden, um interaktive Sitzungen zu ermöglichen. Wenn Sie keine Pässe haben, wird das tägliche 30-Minuten-Kontingent verwendet.
-
-### Persönliches Community-Unterstützungspaket
-
-Das persönliche Community-Support-Paket ist nützlich, wenn Sie gelegentlich technischen Support für Aufgaben leisten, die länger als das kostenlose Tageskontingent dauern. Mit diesem Paket erhalten Sie drei (3) Stunden pro Tag zusätzlich zum kostenlosen 30-Minuten-Tageskontingent. Kurz gesagt, Sie erhalten 3,5 Stunden pro Tag. Wie bei dem kostenlosen 30-Minuten-Kontingent pro Tag müssen diese Stunden nicht in einer Sitzung verbraucht werden, sondern können über den Tag verteilt in verschiedenen Verbindungen genutzt werden. Allerdings sind diese Stunden nicht übertragbar, und unbeaufsichtigte Verbindungen sind nicht im Basispaket enthalten. Dieses Paket ist jedoch als Zusatzpaket für persönliche unbeaufsichtigte Abonnements erhältlich. Dieses Paket ist nur als Jahresabonnement erhältlich.
-
-## RIM Pro
-
-RIM Pro eignet sich entweder für eine einzelne Support-Person oder einen Trainer oder für ein kleines Support-Team. Jeder Pro-Plan ermöglicht Verbindungen zu einer unbegrenzten Anzahl von Zielen sowie die Konfiguration von Zielgruppen.
-
-### RIM Pro Basispaket
-
-Damit kann ein einzelner Controller eine unbegrenzte Anzahl von Zielen steuern.
-
-### Upgrades
-
-Wir bieten Upgrades für die Anzahl der Controller-Plätze und/oder Kanäle sowie für den Funktionsumfang an.
-
-#### Mehrplatz- und Mehrkanal-Setups
-
-Zusätzliche Controller und Kanäle sind gegen einen separaten Aufpreis zu Ihrem Basisabonnement erhältlich. So können Sie wählen, ob Sie zusätzliche Kanäle - gleichzeitige Verbindungen - in Höhe der Anzahl der zusätzlichen Controller wünschen oder nicht. Wenn Sie sich gegen zusätzliche Kanäle entscheiden, kann immer nur einer Ihrer Controller an einer Sitzung beteiligt sein. 
-
-#### RIM Pro Enterprise Addon
-
-Dieses Addon bringt die Funktionen von RIM Enterprise zu einzelnen Support-Mitarbeitern oder kleinen Einheiten. Die Funktionen umfassen:
-* Unbeaufsichtigte Masseninstallation auf Windows-Servern
-* Völlig geräuschloser Modus für vorkonfigurierte unbeaufsichtigte Zielinstaller
-* Optionale Integration mit dem Single-Sign-On-System (SSO) Ihres Unternehmens (erfordert eine zusätzliche Einrichtungsgebühr).
-
-Hinweis: Für dieses Add-on kann eine Identitätsüberprüfung erforderlich sein.
-
-## RIM Enterprise Öffentliche Cloud Edition
-
-Die Enterprise Edition bietet eine unbegrenzte Anzahl von Controllern und Zielen sowie die oben beschriebenen Funktionen. Der Preis jedes Plans richtet sich nach der Anzahl der gleichzeitigen Kanäle, die zu einem bestimmten Zeitpunkt ausgeführt werden können.
-
-Unabhängig davon, welchen Plan Sie wählen, fällt eine zusätzliche einmalige Gebühr für die Einrichtung und das Onboarding an.  
-
-## Aktivieren eines Abonnements oder Passes
-
-Wenn Sie einen Kauf über RIM tätigen, erhalten Sie einen Aktivierungslink. Wenn Sie auf diesen Link klicken, wird Ihr Pass oder Ihr Abonnement aktiviert und kann verwendet werden. Bei Tages- und Unfallpässen ist zu beachten, dass der Zeitraum für einen Pass erst dann beginnt, wenn Sie eine Fernsitzung mit diesem Pass einleiten.
+Organisationen jeder Größe können Scribe for Meetings über ein monatliches oder jährliches Abonnement zum Festpreis erwerben.
