--- a/src/content/docs/it/plans.mdx
+++ b/src/content/docs/it/plans.mdx
@@ -2,74 +2,16 @@
 title: Piani e acquisti
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Scribe for meetings offre una varietà di piani e opzioni di acquisto on-demand per privati, aziende e organizzazioni.
 
-Remote Incident Manager è utile in un'ampia gamma di scenari di frequenza variabile. Per questo motivo, la nostra struttura di piani a più livelli fa ogni ragionevole tentativo di venirvi incontro. Inoltre, ricordate che RIM è sempre gratuito per la persona che riceve aiuto.
+## Meeting Pass
 
-## Livello gratuito
+Un meeting pass consente di condurre una singola riunione utilizzando Scribe for Meetings. I meeting pass non hanno scadenza.
 
-Chiunque può utilizzare RIM per assistere un altro utente per un massimo di 30 minuti al giorno. Non è necessario che questi minuti vengano utilizzati in una sola volta e un contatore di utilizzo terrà sotto controllo il numero di minuti a disposizione in un determinato giorno. Nel corso dei 30 minuti, è possibile connettersi con un numero qualsiasi di persone, per un numero qualsiasi di sessioni interattive.
+## Abbonamento individuale
 
-## Piani per i consumatori
+Gli abbonamenti individuali consentono a un utente di condurre un numero illimitato di riunioni. Gli abbonamenti individuali sono disponibili in termini di fatturazione mensile e annuale.
 
-## Pass
+## Abbonamento organizzazione
 
-I pass sono utili se si fornisce assistenza in base alle necessità. Pagando un pass, questo attenderà pazientemente che lo attiviate ogni volta che ne avete la possibilità. Questo significa anche che è possibile conservare più pass e utilizzarli quando servono.
-
-#### pass per incidenti
-
-Un pass per incidenti consente di assistere un singolo utente per tutto il tempo necessario nell'arco di 24 ore. In qualsiasi momento durante il periodo di 24 ore, è possibile riconnettersi. Supponiamo di iniziare impostando una reinstallazione di Windows durante la notte. Una volta che il computer è in grado di utilizzare RIM, si può tornare a configurare il sistema dell'utente finale come meglio crede.
-
-#### Passaggio giornaliero
-
-Un pass giornaliero consente di assistere diversi utenti nell'arco di 24 ore. Quindi, se avete diverse commissioni da svolgere, vi conviene avere uno di questi pass.
-
-### Pacchetti prepagati orari
-
-Questi pacchetti consentono di avere un determinato numero di ore sul proprio account. Queste ore durano un anno dalla data di utilizzo iniziale, oppure un anno dalla data di acquisto se non vengono utilizzate.
-Queste ore possono essere utilizzate per qualsiasi sessione interattiva e RIM detrarrà solo la quantità esatta di tempo utilizzata. Ad esempio, se si dispone di 5 ore e si utilizzano 12 minuti, rimangono 4 ore e 48 minuti. È inoltre importante notare che l'assegnazione giornaliera gratuita di 30 minuti ha la priorità prima dell'utilizzo del tempo prepagato. Se si esaurisce il tempo, che si tratti di tempo prepagato o di tempo gratuito giornaliero, si riceve un avviso di 5 minuti e di 1 minuto. Se state per esaurire il tempo pagato e ricaricate il vostro account prima che il tempo scada, la vostra sessione sarà ininterrotta.
-
-### Abbonamenti all'accesso personale non presidiato
-
-Questi piani consentono all'utente, in qualità di controllore individuale, di configurare un determinato numero di macchine fisiche per l'accesso non presidiato. Questi piani sono scalabili (fino a dieci target) per soddisfare le vostre esigenze. Sia che vogliate semplicemente controllare il vostro desktop dalla strada, sia che siate il supporto tecnico di riferimento per alcuni membri della vostra famiglia, questi piani vi coprono.  
-Si noti che gli abbonamenti non riguardano le sessioni interattive, cioè quelle avviate tramite una parola chiave. I pass per gli incidenti e i pass giornalieri descritti sopra possono essere utilizzati insieme a un abbonamento per facilitare le sessioni interattive. Se non si dispone di alcun pass, si utilizza l'assegnazione giornaliera di 30 minuti.
-
-### Pacchetto di supporto alla comunità personale
-
-Il pacchetto di supporto personale per la comunità è utile se occasionalmente si fornisce assistenza tecnica per attività più lunghe dell'assegnazione giornaliera gratuita. Questo pacchetto consente di ottenere tre (3) ore al giorno in aggiunta all'assegnazione giornaliera gratuita di 30 minuti. In breve, otterrete 3,5 ore al giorno. Come per l'assegnazione giornaliera gratuita di 30 minuti, queste ore non devono essere utilizzate in un'unica seduta e possono essere impiegate in diverse connessioni durante la giornata. Tuttavia, queste ore non sono rinnovabili e le connessioni non presidiate non sono incluse nel pacchetto base. Tuttavia, questo pacchetto è disponibile come addon per gli abbonamenti personali non presidiati. Questo pacchetto è disponibile solo come abbonamento annuale.
-
-## RIM Pro
-
-RIM Pro è adatto sia a un singolo addetto all'assistenza o formatore, sia a un piccolo team di assistenza. Ogni piano Pro consente la connessione a un numero illimitato di obiettivi e la configurazione di gruppi di obiettivi.
-
-### Pacchetto base RIM Pro
-
-Consente a un singolo controller di controllare un numero illimitato di bersagli.
-
-### Aggiornamenti
-
-Offriamo aggiornamenti al numero di posti controller e/o canali, nonché al set di funzioni disponibili.
-
-#### Configurazioni multisede e multicanale
-
-I controller e i canali aggiuntivi sono disponibili con un costo aggiuntivo separato da aggiungere all'abbonamento base. In questo modo è possibile scegliere se desiderare o meno canali aggiuntivi - connessioni simultanee - pari al numero di controller aggiuntivi. Se si sceglie di non aggiungere canali aggiuntivi, solo uno dei controller può essere impegnato in una sessione in qualsiasi momento. 
-
-#### Addon RIM Pro Enterprise
-
-Questo addon offre le funzionalità di RIM Enterprise ai singoli rappresentanti di supporto o alle piccole unità. Le caratteristiche includono:
-* Distribuzione di massa non presidiata su server Windows
-* Modalità completamente silenziosa per gli installatori di destinazione non presidiati preconfigurati
-* Integrazione opzionale con il sistema SSO (Single Sign-On) dell'organizzazione (richiede un costo di installazione aggiuntivo).
-
-Nota: per questo componente aggiuntivo potrebbe essere richiesta la verifica dell'identità.
-
-## RIM Enterprise Public Cloud Edition
-
-L'edizione enterprise offre un numero illimitato di controller e target, oltre alle funzionalità descritte in precedenza. Il prezzo di ogni piano è determinato dal numero di canali simultanei che possono essere eseguiti in qualsiasi momento.
-
-È previsto un costo aggiuntivo una tantum per l'installazione e l'onboarding, indipendentemente dal piano scelto.  
-
-## attivazione di un abbonamento o di un pass
-
-Quando si effettua un acquisto tramite RIM, si riceve un link di attivazione. Facendo clic sul link, il pass o l'abbonamento sarà attivato e pronto per l'uso. Nel caso di pass giornalieri/incidenti, ricordate che il periodo di tempo di un pass inizia solo quando si avvia una sessione remota utilizzando tale pass.
+Le organizzazioni di qualsiasi dimensione possono acquistare Scribe for Meetings tramite un abbonamento mensile o annuale a prezzo fisso.
