welcome chapter in everything except swedish

--- a/src/content/docs/es/welcome.mdx
+++ b/src/content/docs/es/welcome.mdx
@@ -1,36 +1,37 @@
 ---
-title: Bienvenido
+title: ¡Bienvenidos!
 ---
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-*Remote Incident Manager* (RIM) es una potente aplicación de escritorio remoto multiplataforma totalmente accesible que se utiliza para proporcionar soporte técnico, formación y administración de sistemas a clientes tanto con discapacidad visual como videntes. Además de proporcionar una experiencia de escritorio remoto optimizada, RIM tiene algunas cualidades únicas nunca vistas en otras aplicaciones de escritorio remoto
-## ¿Por qué RIM?
-Si viene de aplicaciones de escritorio remoto anteriores o de herramientas de asistencia basadas en lectores de pantalla, descubrirá que RIM agiliza significativamente su flujo de trabajo.
-### Diseño inclusivo
-Remote Incident Manager es realmente el primero de su clase. Es la primera solución de asistencia remota *totalmente accesible* que pueden utilizar tanto los profesionales de asistencia como los usuarios finales ciegos y videntes. Por lo tanto, RIM puede sustituir completamente a una solución existente, ya que proporciona todo lo que se puede pedir en una solución de asistencia remota segura, además de una accesibilidad completa.
-### Fácil de instalar y desplegar
-En una situación de uno a uno, la instalación no podría ser más sencilla. Una instalación instantánea con un solo clic garantiza que el proceso del usuario final para configurar su máquina para recibir asistencia será rápido e indoloro. Es más, el proceso de instalación inicia RIM una vez finalizado, por lo que estarán listos al instante para conectarse.
-Los técnicos pueden gestionar fácilmente sus máquinas a través de una interfaz web fácil de usar. Los usuarios de empresa pueden utilizar este panel para desplegar RIM en las máquinas de su lugar de trabajo. Los usuarios finales pueden recibir instaladores listos en cuestión de segundos. El propio instalador se puede personalizar mediante argumentos de línea de comandos que, a su vez, se pueden utilizar en un despliegue automatizado.
-### Sesión compartida
-A diferencia del Escritorio Remoto de Windows u otras aplicaciones similares, no se crea un sandbox de sesión remota; lo que la máquina del usuario final está haciendo es lo que usted verá. Esto significa que usted puede solucionar fácilmente un problema que están teniendo, manteniendo su configuración existente intacta. Esto le permite además trabajar en colaboración en un proyecto, enviar y recibir archivos a través del portapapeles, etc.
-### Conexiones rápidas y Estables
-Como RIM utiliza los últimos avances en conexiones directas de ordenador a ordenador, la capacidad de respuesta está muy por encima de otras soluciones. Aunque el servicio central de RIM inicia la conexión, se aparta de tu camino una vez establecida. Todo ello sin necesidad de realizar engorrosos e invasivos cambios en las configuraciones de red.
-### Audio de alta calidad
-RIM utiliza los últimos avances en tecnología de codificación de audio en tiempo real para proporcionar un audio estéreo de alta fidelidad y gran capacidad de respuesta. Escuchará todo el audio que se esté reproduciendo en el equipo del usuario final durante la sesión.
-### Salida visual de alta calidad
-Una vez más, Remote Incident Manager es una solución integral diseñada para sustituir infraestructuras anteriores, en lugar de utilizarse junto a ellas. Como tal, la salida en pantalla de RIM es igualmente sensible y estable. El uso del ratón también es totalmente compatible.
-### Comunicación por voz
-Atrás quedaron los días en los que había que realizar una llamada telefónica o una conferencia web aparte de la sesión remota. RIM proporciona una comunicación de voz nítida y de baja latencia directamente dentro de la sesión.
-### Accesible en *todos* los casos de uso
-RIM es la primera solución de acceso remoto que proporciona una accesibilidad sin precedentes, independientemente del lector de pantalla (o de la falta del mismo) que utilice cualquiera de las partes.
-#### Diferencias en los lectores de pantalla son ahora irrelevantes
-Antes de RIM, solía ser difícil ayudar a alguien que utilizaba un lector de pantalla distinto al tuyo. Con RIM, esto ya es cosa del pasado. A RIM le da igual lo que esté ejecutando cada uno. Tú podrías estar ejecutando JAWS mientras que la persona a la que estás ayudando podría estar ejecutando NVDA o incluso VoiceOver; con RIM, nada de eso importa. No sólo podrás oír la voz del usuario final independientemente de su lector de pantalla, sino que el manejo del teclado de RIM será estable y fiable independientemente de la configuración del lector de pantalla. Esta es una ventaja significativa de una solución independiente del lector de pantalla.
-#### ¿Sin lector de pantalla? No hay problema
-Ahora, un profesional de TI ciego puede ayudar fácilmente a un usuario final vidente, aunque no tenga instalado un lector de pantalla en su ordenador. En ausencia de un lector de pantalla en el ordenador remoto, RIM se encargará de que pueda seguir recibiendo voz siempre que esté utilizando el lector de pantalla gratuito [NVDA Screen Reader](https://nvaccess.org) o VoiceOver en Mac OS. Remote incident Manager iniciará su módulo de accesibilidad que le permitirá controlar la máquina del cliente con el habla como si tuviera un lector de pantalla. El usuario final no sólo no tiene que preocuparse de instalar un lector de pantalla, sino que ni siquiera oye el habla que ahora tú oyes mientras controlas su ordenador.
-## Convenciones de documentación y terminología
-* Dado que Remote Incident Manager es multiplataforma, muchas secciones de esta documentación adaptarán su contenido al sistema operativo que esté ejecutando.
-    * En la mayoría de los casos, el manual reconocerá si está ejecutando Windows o Mac, y ajustará el contenido en consecuencia.
-    * En caso de que falle el reconocimiento de la plataforma o de que esté leyendo la documentación en un dispositivo diferente, como un teléfono o una tableta, encontrará un botón o un conjunto de botones en la página para mostrar el contenido para la plataforma que utilice.
-* Las conexiones RIM se producen entre un ordenador de destino y un controlador.
-    * Un ordenador de destino es el ordenador que recibirá asistencia remota.
-    * Un controlador se conecta a un ordenador de destino para recibir asistencia remota.
+## Presentación de Scribe for Meetings
+
+Scribe for Meetings hace que las pantallas compartidas de Zoom o Microsoft Teams sean fácilmente accesibles para los participantes que utilicen un lector de pantalla o una ampliación de pantalla Sabemos que el cumplimiento de la accesibilidad es importante para usted, especialmente cuando no está seguro de si su contenido original está totalmente optimizado para la accesibilidad. Scribe for Meetings puede fácilmente hacer que su pantalla compartida esté disponible simultáneamente como HTML compatible con WCAG2.1 en tan sólo 5 minutos.
+
+## ¿Es fácil utilizar Scribe for Meetings?
+
+1. Cargue su paquete de diapositivas con antelación o tan solo 5 minutos antes de su seminario web.
+1. Pegue un enlace en la zona de chat que le proporcionamos durante su reunión (incluye instrucciones para los participantes).
+1. Los participantes que necesiten contenidos accesibles hacen clic en el enlace y obtienen acceso completo a su presentación..
+
+¡Y empieza la presentación de diapositivas!
+
+## Características de Cribe For Meetings
+
+* Carga con confianza contenido compartido accesible en tan sólo 5 minutos antes de tu presentación.
+* No es necesario instalar ninguna aplicación o software adicional para crear o acceder al contenido.
+* Actualmente funciona con Zoom (reuniones y seminarios web) y Microsoft Teams.
+* El contenido se formatea en HTML accesible compatible con WCAG2.1 durante la carga.
+* Las descripciones gráficas se añaden automáticamente a las diapositivas.
+* Los participantes pueden pausar la visualización en cualquier momento para leer más mientras usted continúa.
+* Un clic y los asistentes estarán leyendo tu presentación con su lector de pantalla.
+
+## Increíblemente sencillo, increíblemente potente.
+
+Al hacer accesibles las pantallas compartidas con Scribe for Meetings, el contenido se muestra en una ventana independiente. Los participantes siguen teniendo acceso completo a la sesión de Zoom o Microsoft Teams.
+Los asistentes pueden pasar de la reunión de Zoom o Microsoft Teams a la pantalla compartida accesible en cualquier momento.
+
+No es necesario dar instrucciones adicionales sobre cómo acceder al contenido compartido ni interrumpir el flujo de la presentación. Los participantes leerán intuitivamente el contenido como en cualquier otra página web.
+
+## Interfaz de documentación
+
+Esta documentación presenta controles sencillos para pasar de una sección a otra, así como para seleccionar el idioma en el que se desea leer la documentación.
