--- a/src/content/docs/en/welcome.mdx
+++ b/src/content/docs/en/welcome.mdx
@@ -3,36 +3,35 @@ title: Welcome!
 ---
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-*Remote Incident Manager* (RIM) is a powerful, cross-platform fully accessible remote desktop application used to provide technical support, training, and system administration to clients both visually impaired and sighted alike. In addition to providing a streamlined remote desktop experience, RIM has a few unique qualities previously unseen in other remote desktop applications
+## Introducing Scribe for Meetings
 
-## Why RIM?
-If you are coming from previous remote desktop applications or screen reader-based assistance tools, you will find that RIM significantly streamlines your workflow.
-### Inclusive Design
-Remote Incident Manager is truly a first of its kind. It is the first *fully accessible* remote support solution that can be used by both blind and sighted support pros and end users. Thus, RIM can fully replace an existing solution, as it provides everything you could ask for in a secure remote support solution, plus complete accessibility.
-### Easy to Install and Deploy
-In a one-to-one situation, the installation could not be simpler. A one-click instant install ensures that the end user's process for setting up their machine to receive assistance will be quick and painless. What's more, the installation process launches RIM after it finishes, so they will be instantly ready to connect.
-Technicians can easily manage their machines via an easy to use web-based interface. Enterprise users can use this dashboard to deploy RIM to machines in their workplace. Ready-made installers can be issued to end users in seconds. The installer itself can be further customized via command line arguments which can in turn be utilized in an automated deployment.
-### Shared Session
-Unlike Windows Remote Desktop or other similar applications, a remote session sandbox is not created; what the end user's machine is doing is what you'll be seeing. This means that you can easily troubleshoot a problem they are having while keeping their existing configuration intact. This further allows you to work collaboratively on a project, send files to and from via the clipboard, etc.
-### Fast and Stable Connections
-Because RIM uses the latest advancements in direct computer-to-computer connections, the responsiveness is head and shoulders above other solutions. While RIM's central service initiates the connection, it gets out of your way once the connection is established. All this without the need to make cumbersome and invasive changes to network configurations.
-### High Quality Audio
-RIM uses the latest advancements in real-time audio encoding technology to provide extremely responsive, high-fidelity stereo audio. You will hear any and all audio that is playing on the end user's machine during the session.
-### High-Quality Visual Output
-Again, Remote Incident Manager is an all-inclusive solution designed to replace previous infrastructures, rather than be used alongside them. As such, RIM's screen output is equally as responsive and stable. Using the mouse is fully supported as well.
-### Voice Communication
-Gone are the days of having to place a separate phone call or web conference alongside the remote session. RIM provides crystal clear, low-latency voice communication right inside your session.
-### Accessible in *All* Use Cases
-RIM is the first remote access solution that provides unparalleled accessibility, irrespective of the screen reader (or lack thereof) that either party is using.
-#### Differences in Screen Readers are now Irrelevant
-Before RIM, it used to be difficult to assist someone running a different screen reader than your own. With RIM, this is now a thing of the past. RIM doesn't care what either party is running. You could be running JAWS while the person you're assisting could be running NVDA or even VoiceOver; with RIM, none of that matters. Not only will you be able to hear the end user's speech irrespective of their screen reader, RIM's keyboard handling will be stable and reliable irrespective of screen reader configuration. This is a significant advantage of a screen reader-independent solution.
-#### No Screen Reader? No Problem!
-A blind IT professional can now easily help a sighted end user, even if they do not have a screen reader installed on their computer. In the absence of a screen reader on the remote computer, RIM will see to it that you will still be able to get speech provided you are using either the free [NVDA Screen Reader](https://nvaccess.org) or VoiceOver on Mac OS. Remote incident Manager will initiate its accessibility module which allows you to control the client's machine with speech as if they had a screen reader. Not only does the end user not have to worry about installing a screen reader, they don't even hear the speech that you're now hearing while you control their computer.
-## Documentation Conventions and Terminology
-* Because Remote Incident Manager is cross-platform, many sections of this documentation will tailor their contents to the operating system that you are running.
-    * In most cases, the manual will recognize whether you are running Windows or Mac, and adjust the content accordingly.
-    * In the event the platform recognition fails or you are reading the documentation on a different device such as a phone or tablet, the manual will fall back to the windows version. You will find buttons on both the top and bottom of the page that can be used to show the content for your platform of choice.
-* Switching the language will take you to the Welcome section of the manual for your chosen language.
-* RIM connections occur between a target and a controller.
-    * A target computer is the computer that will be receiving remote support.
-    * A controller connects to a target computer for remote support.
+Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares accessible to participants using a screen reader or screen magnification! We know accessibility compliance is important to you, especially when you’re unsure if your original content is fully optimized for accessibility. Scribe for Meetings can easily make your screen shares simultaneously available as WCAG2.1 compliant HTML in as little as 5-minutes.
+
+## How easy is Scribe for Meetings to use?
+
+1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
+1. Paste a link in the chat area we provide you during your meeting (includes participant instructions).
+1. Participants requiring accessible content click the link and get full access to your presentation…
+
+And it’s on with the slide show!
+
+## cribe For Meetings features
+
+* Confidently upload accessible shared content in as little as 5-minutes before your presentation.
+* No additional app or software to install to create or access content.
+* Currently works with Zoom (meetings and webinars) and Microsoft Teams.
+* Your content is formatted into WCAG2.1 compliant Accessible HTML during upload.
+* Graphical descriptions are automatically added to your slides.
+* Participants can pause their view anytime for additional reading while you continue on.
+* One click and attendees are reading your presentation using their screen reader.
+
+## Amazingly simple, Incredibly powerful.
+
+When you make your screen shares accessible with Scribe for Meetings, the content is displayed in a separate window. Participants continue to have full access to the Zoom or Microsoft Teams session.
+Attendees can switch back and forth from the Zoom or Microsoft Teams meeting to your accessible screen share anytime they want.
+
+There is no need to give extra instructions on how to access your shared content or break up the flow of your presentation. Participants will intuitively read content just like any other web page.
+
+## Documentation Interface
+
+This documentation features easy controls for moving from one section to another, as well as selecting a language to read the documentation in.
