--- a/src/content/docs/sv/welcome.mdx
+++ b/src/content/docs/sv/welcome.mdx
@@ -1,36 +1,37 @@
 ---
-title: Välkommen!
+title: Welcome!
 ---
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-*Remote Incident Manager* (RIM) är en kraftfull, plattformsoberoende och fullt tillgänglig fjärrskrivbordsapplikation som används för att ge teknisk support, utbildning och systemadministration till både synskadade och seende kunder. Förutom att ge en strömlinjeformad upplevelse av fjärrskrivbord, har RIM några unika egenskaper som tidigare inte setts i andra fjärrskrivbordsapplikationer
-## Varför RIM?
-Om du kommer från tidigare fjärrskrivbordsapplikationer eller skärmläsarbaserade hjälpverktyg kommer du att upptäcka att RIM avsevärt effektiviserar ditt arbetsflöde.
-### Inkluderande design
-Remote Incident Manager är verkligen först i sitt slag. Det är den första *fullständigt tillgängliga* fjärrsupportlösningen som kan användas av både blinda och seende supportproffs och slutanvändare. RIM kan därför helt ersätta en befintlig lösning, eftersom den erbjuder allt du kan begära av en säker fjärrsupportlösning, plus fullständig tillgänglighet.
-### Lätt att installera och driftsätta
-I en en-till-en-situation kan installationen inte vara enklare. En omedelbar installation med ett klick säkerställer att slutanvändarens process för att konfigurera sin maskin för att ta emot hjälp blir snabb och smärtfri. Dessutom startar installationsprocessen RIM efter att den är klar, så att de omedelbart är redo att ansluta.
-Teknikerna kan enkelt hantera sina maskiner via ett lättanvänt webbaserat gränssnitt. Företagsanvändare kan använda denna instrumentpanel för att distribuera RIM till maskiner på sin arbetsplats. Färdiga installationsprogram kan skickas ut till slutanvändare på några sekunder. Själva installationsprogrammet kan anpassas ytterligare via kommandoradsargument som i sin tur kan användas i en automatiserad driftsättning.
-### Delad session
-Till skillnad från Windows Remote Desktop eller andra liknande applikationer skapas ingen sandlåda för fjärrsessioner; det du ser är vad slutanvändarens maskin gör. Det innebär att du enkelt kan felsöka ett problem som användaren har och samtidigt behålla den befintliga konfigurationen intakt. Det gör det också möjligt att samarbeta i ett projekt, skicka filer till och från via urklipp osv.
-### Snabba och Stabila anslutningar
-Eftersom RIM använder de senaste framstegen inom direkta dator-till-dator-anslutningar är reaktionsförmågan överlägsen andra lösningar. RIM:s centrala tjänst initierar anslutningen, men när anslutningen väl är upprättad går den ur vägen. Allt detta utan att du behöver göra besvärliga och invasiva ändringar i nätverkskonfigurationerna.
-### Ljud av hög kvalitet
-RIM använder de senaste framstegen inom ljudkodningsteknik i realtid för att tillhandahålla extremt responsivt stereoljud med hög kvalitet. Du kommer att höra allt ljud som spelas upp på slutanvändarens dator under sessionen.
-### Högkvalitativ visuell output
-Även Remote Incident Manager är en heltäckande lösning som är utformad för att ersätta tidigare infrastrukturer, snarare än att användas tillsammans med dem. Därför är RIM:s skärmbild lika responsiv och stabil. Musanvändning stöds också fullt ut.
-### Röstkommunikation
-Det är slut med att behöva ringa ett separat telefonsamtal eller hålla en webbkonferens vid sidan av fjärrsessionen. RIM tillhandahåller kristallklar röstkommunikation med låg latens direkt i din session.
-### Tillgänglig i *alla* användningsfall
-RIM är den första fjärråtkomstlösningen som ger oöverträffad tillgänglighet, oavsett vilken skärmläsare (eller avsaknad av skärmläsare) som någon av parterna använder.
-#### Skillnader i Skärmläsare är nu irrelevanta
-Före RIM var det svårt att hjälpa någon som körde en annan skärmläsare än din egen. Med RIM hör detta nu till det förflutna. RIM bryr sig inte om vad någon av parterna kör. Du kan köra JAWS medan personen du hjälper kan köra NVDA eller till och med VoiceOver; med RIM spelar inget av det någon roll. Du kommer inte bara att kunna höra slutanvändarens tal oavsett skärmläsare, RIM:s tangentbordshantering kommer att vara stabil och tillförlitlig oavsett skärmläsarkonfiguration. Detta är en stor fördel med en lösning som är oberoende av skärmläsare.
-#### Ingen skärmläsare? Inga problem!
-En blind IT-specialist kan nu enkelt hjälpa en seende slutanvändare, även om de inte har en skärmläsare installerad på sin dator. Om det inte finns någon skärmläsare på fjärrdatorn kommer RIM att se till att du fortfarande kan få tal förutsatt att du använder antingen den kostnadsfria [NVDA Screen Reader] (https://nvaccess.org) eller VoiceOver på Mac OS. Remote incident Manager kommer att initiera sin tillgänglighetsmodul som gör att du kan styra klientens maskin med tal som om de hade en skärmläsare. Slutanvändaren behöver inte oroa sig för att installera en skärmläsare och hör inte heller det tal som du nu hör när du styr deras dator.
-## Konventioner och terminologi för dokumentation
-* Eftersom Remote Incident Manager är plattformsoberoende kommer många avsnitt i denna dokumentation att anpassas till det operativsystem som du kör.
-    * I de flesta fall kommer manualen att känna igen om du kör Windows eller Mac och anpassa innehållet därefter.
-    * Om plattformsigenkänningen misslyckas eller om du läser dokumentationen på en annan enhet, t.ex. en telefon eller surfplatta, hittar du en knapp eller en uppsättning knappar på sidan som visar innehållet för den plattform du använder.
-* RIM-anslutningar sker mellan en måldator och en styrenhet.
-    * En måldator är den dator som kommer att ta emot fjärrsupport.
-    * En styrenhet ansluter till en måldator för fjärrsupport.
+## Introducing Scribe for Meetings
+
+Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares accessible to participants using a screen reader or screen magnification! We know accessibility compliance is important to you, especially when you’re unsure if your original content is fully optimized for accessibility. Scribe for Meetings can easily make your screen shares simultaneously available as WCAG2.1 compliant HTML in as little as 5-minutes.
+
+## How easy is Scribe for Meetings to use?
+
+1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
+1. Paste a link in the chat area we provide you during your meeting (includes participant instructions).
+1. Participants requiring accessible content click the link and get full access to your presentation…
+
+And it’s on with the slide show!
+
+## cribe For Meetings features
+
+* Confidently upload accessible shared content in as little as 5-minutes before your presentation.
+* No additional app or software to install to create or access content.
+* Currently works with Zoom (meetings and webinars) and Microsoft Teams.
+* Your content is formatted into WCAG2.1 compliant Accessible HTML during upload.
+* Graphical descriptions are automatically added to your slides.
+* Participants can pause their view anytime for additional reading while you continue on.
+* One click and attendees are reading your presentation using their screen reader.
+
+## Amazingly simple, Incredibly powerful.
+
+When you make your screen shares accessible with Scribe for Meetings, the content is displayed in a separate window. Participants continue to have full access to the Zoom or Microsoft Teams session.
+Attendees can switch back and forth from the Zoom or Microsoft Teams meeting to your accessible screen share anytime they want.
+
+There is no need to give extra instructions on how to access your shared content or break up the flow of your presentation. Participants will intuitively read content just like any other web page.
+
+## Documentation Interface
+
+This documentation features easy controls for moving from one section to another, as well as selecting a language to read the documentation in.
